<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    >
    
      <TextView
          android:id="@+id/textView3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/textView4"
          android:paddingBottom="2dp"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          android:paddingTop="2dp"
          android:text="@string/about3"
          android:textSize="15sp"
          android:typeface="serif" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp"
        android:text="@string/about4"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:paddingBottom="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="2dp"
        android:text="@string/about2"
        android:textSize="15sp"
        android:typeface="serif" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/textView41"
          android:layout_marginTop="22dp"
          android:gravity="center"
          android:text="@string/about5"
          android:textSize="15sp"
          android:typeface="serif" />

      <TextView
          android:id="@+id/textView41"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/textView2"
          android:paddingBottom="2dp"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          android:paddingTop="2dp"
          android:text="@string/about41"
          android:textSize="15sp"
          android:typeface="serif" />

 <com.google.ads.AdView
     android:id="@+id/adView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     ads:adSize="BANNER"
     ads:adUnitId="a151ea6c135b761"
     ads:loadAdsOnCreate="true"
     android:gravity="center" 
     android:layout_centerHorizontal="true"
     >

 </com.google.ads.AdView>

 <Button
     android:id="@+id/button1"
     android:layout_width="123dp"
     android:layout_height="wrap_content"
     android:layout_above="@+id/adView"
     android:layout_centerHorizontal="true"
     android:gravity="center"
     android:text="Close" />

 <TextView
     android:id="@+id/textView1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
     android:gravity="center_horizontal"
     android:includeFontPadding="true"
     android:padding="8dp"
     android:paddingTop="5dp"
     android:text="@string/about1"
     android:textSize="18sp"
     android:typeface="serif" />
    
</RelativeLayout>